fix : Controller 클래스 메소드 이름을 명확하게 구분 할 수 있게 수정 fix : 불 필요한 주석 제거 fix: Constant 클래스를 생성하여 매직넘버 수정 refactor : 우승자의 이동한 만큼의 크기와 그 크기를 갖는 우승자를 리스트로 만드는 과정을 한번에 했었는데, 최대값 뽑기, 최대값 가진 우승자 리스트 만들기를 메소드로 역할을 분리 refactor : Service 클래스에서 실행 결과가 출력되는 부분을 View 클래스로 이동